--- a/stopwatch.css
+++ b/stopwatch.css
@@ -1,79 +1,91 @@
-body{
-  background-color: rgba(0,0,0, 0.35);
-}
-.title {
-    border-radius: 3px;
-    border: 2px solid black;
-    color: rgba(255, 75, 0, 0.7);
-    margin: auto;
-    margin-bottom: 15px;
-    text-align: center;
-    width: 300px;
-
-   }
-
-#scoreboard {
-   width: 100%;
-   border: 1px solid black;
-   border-radius: 3px;
-   margin-bottom: 15px;
-    }
-
-tr, td {
-  outline: 1px solid black;
-   }
-
-.firstRow {
-  width: 100px;
-}
-
-#pitchCount {
-  border: 1px solid black;
-  margin-bottom: 15px;
-}
-.pitchCount {
-   width: 100px;
-
-}
-
-.count{
-  width: 50px;
-}
-
-
-h3  {
-    border-radius: 3px;
-    border: 2px solid black;
-    color: rgba(255, 75, 0, 0.7);
-    margin: auto;
-    text-align: center;
-    width: 300px;
-    }
-p {
-    text-align: center;
-}
-  .stopwatch {
-    display: inline-block;
-    background-color: white;
-    border: 1px solid #eee;
-    padding: 5px;
-    margin: 5px;
-  }
-  .stopwatch span {
-    font-weight: bold;
-    display: block;
-  }
-  .stopwatch a {
-    padding-right: 5px;
-    text-decoration: none
-
-    }
-
+/*styles for the stopwatches and the bases*/
 #a-time {
-    width: 200px;
-    height: 40px;
-    color: red;
-    outline: 1px solid black;
+  color: red;
+  font-size: 2em;
+  height: 70px;
+  margin-bottom: 0px;
+  margin-left: 230px;
+  margin-top: 50px;
+  outline: 1px solid black;
+  width: 200px;
+  display: inline-block;
+}
 
+#base.third_base {
+  background-color: white;
+  float: left;
+  height: 75px;
+  margin: 75px;
+  margin-left: 120px;
+  margin-top: 10px;
+  width: 75px
+  
+}
+
+#base.home_plate {
+  background-color: white;
+  clear: left;
+  float: right;
+  height: 75px;
+  margin-right: 30px;
+  margin-top: 10px;
+  width: 75px;
+}
+
+#base.first_base {
+  background-color: white;
+  float: right;
+  height: 75px;
+  margin-left: 100px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  width: 75px;
+  margin-top: 140px;
+}
+
+.active {
+  background-color: yellow;
+}
+
+
+#base.second_base {
+  background-color: white; 
+  float: left;
+  height: 75px;
+  margin-top: 150px;
+  margin-left: 150px;
+  width: 75px;
+}
+
+
+#timeBtn {
+  display: inline-block;
+  background-color: lightgray;
+  border: 1px solid royalblue;
+  border-radius: 10px;
+  font-size: medium;
+  font-weight: 800;
+  margin-left: 342px;
+  margin-top: 0px;
+  transform: rotate(-45deg);
+  padding: 8px 20px;
 
 }
+
+.container {
+   background-color: darkgoldenrod;
+  width: 500px;
+  height: 500px;
+  margin-left: 31%;
+  margin-top: -175px;
+  transform: rotate(45deg);
+  border-radius: 30em 5em 5em
+}
+
+.stopwatch span {
+  font-weight: bold;
+}
+
+
+
+
